change from CollectedMergeMethodData to InferCollectedMergeData