@@ -1,28 +1,26 @@
 package org.example.infer;
 
 import org.eclipse.jdt.core.dom.*;
-import org.eclipse.jdt.core.dom.rewrite.ASTRewrite;
-import org.example.gitManager.CollectedMergeMethodData;
+import org.example.gitManager.InferCollectedMergeData;
 
-import java.io.File;
-import java.io.FileReader;
 import java.io.IOException;
+import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 
 public class InferParser {
-    private CollectedMergeMethodData collectedMergeMethodData;
+    private InferCollectedMergeData inferCollectedMergeData;
+    private String inferDependenciesPath = "/src/main/java/inferDependencies";
 
-    public InferParser(CollectedMergeMethodData collectedMergeMethodData) {
-        this.collectedMergeMethodData = collectedMergeMethodData;
+    public InferParser(InferCollectedMergeData inferCollectedMergeData) {
+        this.inferCollectedMergeData = inferCollectedMergeData;
     }
 
     public void execute() throws IOException {
-        String source = new String(Files.readAllBytes(Paths.get(collectedMergeMethodData.getFilePath())));
+        String source = new String(Files.readAllBytes(Path.of(inferCollectedMergeData.getFilePath())));
 
-        createInferPackage(collectedMergeMethodData.getProjectPath());
+        createInferPackage(inferCollectedMergeData.getProjectPath());
 
         ASTParser parser = ASTParser.newParser(AST.JLS_Latest);
         parser.setSource(source.toCharArray());
@@ -30,32 +28,29 @@ public class InferParser {
         parser.setKind(ASTParser.K_COMPILATION_UNIT);
         CompilationUnit cu = (CompilationUnit) parser.createAST(null);
 
-        InferVisitor inferVisitor = new InferVisitor(collectedMergeMethodData, cu);
+        InferVisitor inferVisitor = new InferVisitor(inferCollectedMergeData, cu);
 
         cu.accept(inferVisitor);
-        inferVisitor.createInferClassFile(source, collectedMergeMethodData.getProjectPath() + "src/main/java/inferDependencies");
+        inferVisitor.createInferClassFile(source, inferCollectedMergeData.getProjectPath() + inferDependenciesPath);
     }
 
-    private char[] readFileToCharArray(File file) throws IOException {
-        try (FileReader reader = new FileReader(file)) {
-            char[] contents = new char[(int) file.length()];
-            reader.read(contents);
-            return contents;
-        }
-    }
+    public void createInferPackage(String targetPath) {
+        Path sourceDirPath = Path.of(".", inferDependenciesPath);
+        Path targetDirPath = Path.of(targetPath, inferDependenciesPath);
 
-    private void createInferPackage(String targetPath) {
         try {
-            Path targetDirPath = Path.of(targetPath + "/src/main/java/inferDependencies");
-            Path sourceFilePath = Path.of("./src/main/java/inferDependencies/InferWrapper.java");
-            Path targetFilePath = Path.of(targetPath + "src/main/java/inferDependencies/InferWrapper.java");
-
-            if(Files.notExists(targetDirPath)) {
+            if (Files.notExists(targetDirPath)) {
                 Files.createDirectories(targetDirPath);
             }
 
-            Files.copy(sourceFilePath, targetFilePath, StandardCopyOption.REPLACE_EXISTING);
+            try (DirectoryStream<Path> stream = Files.newDirectoryStream(sourceDirPath)) {
+                for (Path file : stream) {
+                    Path targetFile = targetDirPath.resolve(file.getFileName());
+                    Files.copy(file, targetFile, StandardCopyOption.REPLACE_EXISTING);
+                }
+            }
         } catch (IOException e) {
+            System.err.println("Error copying files: " + e.getMessage());
             e.printStackTrace();
         }
     }
